@@ -338,6 +338,12 @@ struct gengetopt_args_info
   const char *routeif_help; /**< @brief Interface to use as default route; turns on 'manual' routing help description.  */
   int framedservice_flag;	/**< @brief Use Service-Type = Framed instead of Login (default=off).  */
   const char *framedservice_help; /**< @brief Use Service-Type = Framed instead of Login help description.  */
+  int challengetimeout_arg;	/**< @brief Timeout in seconds for the generated challenge (default='600').  */
+  char * challengetimeout_orig;	/**< @brief Timeout in seconds for the generated challenge original value given at command line.  */
+  const char *challengetimeout_help; /**< @brief Timeout in seconds for the generated challenge help description.  */
+  int challengetimeout2_arg;	/**< @brief Timeout in seconds for challenge during login (default='1200').  */
+  char * challengetimeout2_orig;	/**< @brief Timeout in seconds for challenge during login original value given at command line.  */
+  const char *challengetimeout2_help; /**< @brief Timeout in seconds for challenge during login help description.  */
   
   unsigned int help_given ;	/**< @brief Whether help was given.  */
   unsigned int version_given ;	/**< @brief Whether version was given.  */
@@ -449,6 +455,8 @@ struct gengetopt_args_info
   unsigned int usetap_given ;	/**< @brief Whether usetap was given.  */
   unsigned int routeif_given ;	/**< @brief Whether routeif was given.  */
   unsigned int framedservice_given ;	/**< @brief Whether framedservice was given.  */
+  unsigned int challengetimeout_given ;	/**< @brief Whether challengetimeout was given.  */
+  unsigned int challengetimeout2_given ;	/**< @brief Whether challengetimeout2 was given.  */
 
 } ;
 
