@@ -258,6 +258,8 @@ int process_options(int argc, char **argv, int minimal) {
   options.no_uamwispr = args_info.nouamwispr_flag;
   options.wpaguests = args_info.wpaguests_flag;
   options.openidauth = args_info.openidauth_flag;
+  options.challengetimeout = args_info.challengetimeout_arg;
+  options.challengetimeout2 = args_info.challengetimeout2_arg;
   options.defsessiontimeout = args_info.defsessiontimeout_arg;
   options.definteriminterval = args_info.definteriminterval_arg;
   options.defbandwidthmaxdown = args_info.defbandwidthmaxdown_arg;
